Improve GPU usage tests per review feedback
- Add no-GPU scenario to randomUsage() for better test coverage
- Make buildUsage() static to enable direct unit testing
- Simplify GpuUsageTransportActionTests by removing mock boilerplate
- Add test for empty cluster response scenario
- Fix licenseNotAvailable test: index_build_count must be 0
- Verify GPU names are reported even when setting is disabled